# fastapi_buddies

./: Dockerfile  Dokerfile  README.md  cloudinary_config.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  render.yaml  requirements.txt  test.py  test_voice_agent.py
